slider too close (iphone bug fix)

--- a/assets/css/config.css
+++ b/assets/css/config.css
@@ -606,7 +606,6 @@ html,body,main {
 
 .double-slider-row {
   display: flex;
-  gap: 14px;
 }
 
 .slider-block {
